# calvinball

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/calvinball/: __init__.py
src/calvinball/agent/: executor.py  loop.py  planner.py  prompts.py
src/calvinball/cli/: app.py  config_cmd.py  connect.py  investigate.py  keygen.py  status.py
src/calvinball/config/: settings.py
src/calvinball/integrations/: base.py  manager.py  snowflake.py
src/calvinball/investigations/: manager.py  models.py
src/calvinball/llm/: client.py  messages.py
src/calvinball/persistence/: db.py  memory.py  schemas.sql
src/calvinball/tools/: base.py  registry.py
src/calvinball/tools/builtin/: ask_human.py  build_integration.py  chart.py  file_io.py  python_exec.py  remember.py  sql_query.py
src/calvinball/viz/: charts.py
