[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calvinball"
version = "0.1.0"
description = "Autonomous data analyst agent that goes hunting"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "litellm>=1.0",
    "plotly>=5.0",
    "kaleido==0.2.1",
    "aiosqlite>=0.19",
    "pydantic-settings>=2.0",
    "snowflake-connector-python>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
calvinball = "calvinball.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/calvinball"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
